tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match14.bal
import ballerina/java;

function decimalParamAndWithBigDecimal(decimal a1) returns decimal = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;

